# FootballCareerAI

./: .gitignore  CMakeLists.txt  Championnat.cpp  Championnat.h  Club.cpp  Club.h  DataManager.cpp  DataManager.h  GameUtils.h  Match.cpp  Match.h  MercatoView.cpp  MercatoView.h  Player.cpp  Player.h  PlayerCard.cpp  PlayerCard.h  Profil.cpp  Profil.h  Saison.cpp  Saison.h  SaveManager.cpp  SaveManager.h  main.cpp  mainwindow.cpp  mainwindow.h  run.sh
